fixed text not being very visible

--- a/app/results/page.module.css
+++ b/app/results/page.module.css
@@ -63,4 +63,5 @@
 
 .image {
   border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.705);
 }
